feat: refactoring to fully parse version by schema